# gTestExample

./: .travis.yml  CMakeLists.txt  README.md
CMakeModules/: CodeCoverage.cmake  qtMake.cmake
src/: TeaBreak.cpp  TeaBreak.h  example.cpp
test/: QStringTest.cpp  QtTypePrinters.h  SimpleTest.cpp  TeaBreakTest.cpp  main.cpp  tst_tcpcommsocket.cpp  tst_tcpcommsocket.h
test/Mocks/: TeaBreak.h
